(executable
 (name example)
 (modules example)
 (libraries omnomnom omnomnom.alcotest omnomnom.golden omnomnom.junit
   omnomnom.qcheck alcotest qcheck-core unix))

(executable
 (name main)
 (modules
  (:standard \ example))
 (libraries omnomnom omnomnom.alcotest omnomnom.golden omnomnom.junit
   omnomnom.qcheck alcotest qcheck-core fmt cmdliner))

(rule
 (alias example)
 (deps
  (:exe example.exe)
  (source_tree data))
 (action
  (run %{exe} --base-dir "../" --display --junit)))

(rule
 (alias runtest)
 (deps
  (:exe main.exe)
  (source_tree data))
 (action
  (run %{exe} --base-dir "../")))

(data_only_dirs data)
